--- a/BIG_MART.ipynb
+++ b/BIG_MART.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "id": "dad60c89",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "a1f60acb",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "4  Supermarket Type1           994.7052  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "98739b00",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "max         13086.964800  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "cfa8cb99",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "ab58b048",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "b32a6f19",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "(8523, 12)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "321d01ff",
    "metadata": {},
    "outputs": [
@@ -717,7 +717,7 @@
        "[8523 rows x 12 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "f6a8f63d",
    "metadata": {},
    "outputs": [
@@ -750,7 +750,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "f716d6a1",
    "metadata": {},
    "outputs": [],
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "d6bebf1a",
    "metadata": {},
    "outputs": [],
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "9ee98bff",
    "metadata": {},
    "outputs": [],
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "id": "0a943869",
    "metadata": {},
    "outputs": [],
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "635fa9c5",
    "metadata": {},
    "outputs": [
@@ -823,7 +823,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "9c9f2ac9",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "a1d416a9",
    "metadata": {},
    "outputs": [
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "id": "363c416a",
    "metadata": {},
    "outputs": [
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "a0257360",
    "metadata": {},
    "outputs": [
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "c51c94ce",
    "metadata": {},
    "outputs": [
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "id": "45be38e8",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "id": "ee3493e8",
    "metadata": {},
    "outputs": [
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "id": "da1ec335",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "id": "c111e04d",
    "metadata": {},
    "outputs": [
@@ -1081,7 +1081,7 @@
        "Name: Item_Fat_Content, dtype: int64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "id": "779832f5",
    "metadata": {},
    "outputs": [],
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "id": "78f5aabb",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "id": "d82066b8",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "id": "afb226ed",
    "metadata": {},
    "outputs": [],
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "id": "d6d90359",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1287,7 @@
        "4                     2            1           994.7052  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 31,
    "id": "ad6df5f7",
    "metadata": {},
    "outputs": [],
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 32,
    "id": "1d30a0f5",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "id": "0ef3aeea",
    "metadata": {},
    "outputs": [],
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 34,
    "id": "00e01797",
    "metadata": {},
    "outputs": [],
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 35,
    "id": "2068b6d7",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1374,7 @@
        "             reg_lambda=1, ...)"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 36,
    "id": "676cc84d",
    "metadata": {},
    "outputs": [
@@ -1395,7 +1395,7 @@
        "0.7917541745209284"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,7 +1406,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 37,
+   "id": "f2e5fe6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def correlation(df,min):\n",
+    "    col_corr=set()\n",
+    "    corr_matrix=df.corr()\n",
+    "    for i in range(len(corr_matrix.columns)):\n",
+    "        for j in range(i):\n",
+    "            if abs(corr_matrix.iloc[i,j])>min:\n",
+    "                colname=corr_matrix.columns[i]\n",
+    "                col_corr.add(colname)\n",
+    "    return col_corr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "90dfb845",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X = df.drop(columns='Item_Outlet_Sales', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "441cf7c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corr_features=correlation(X,0.8)\n",
+    "len(set(corr_features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "dca2b394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=X.drop(corr_features,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "13da6112",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.2, random_state=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "044a543c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regressor = XGBRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "01a81402",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', callbacks=None,\n",
+       "             colsample_bylevel=1, colsample_bynode=1, colsample_bytree=1,\n",
+       "             early_stopping_rounds=None, enable_categorical=False,\n",
+       "             eval_metric=None, gamma=0, gpu_id=-1, grow_policy='depthwise',\n",
+       "             importance_type=None, interaction_constraints='',\n",
+       "             learning_rate=0.300000012, max_bin=256, max_cat_to_onehot=4,\n",
+       "             max_delta_step=0, max_depth=6, max_leaves=0, min_child_weight=1,\n",
+       "             missing=nan, monotone_constraints='()', n_estimators=100, n_jobs=0,\n",
+       "             num_parallel_tree=1, predictor='auto', random_state=0, reg_alpha=0,\n",
+       "             reg_lambda=1, ...)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regressor.fit(X_train, Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "54eaa53f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7904166064867265"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regressor.score(X,Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "6b27bc24",
    "metadata": {},
    "outputs": [],
@@ -1417,18 +1548,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 66,
    "id": "e48bccfc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2108.4238 , 3464.7761 , 1560.9819 ,  116.43849,  254.88275],\n",
+       "array([2172.7656 , 3413.7944 , 1577.8572 ,  143.02753,  311.2844 ],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
